Fix highlighting size
The border when highlighting a channel/folder doesn't fit the channel size

--- a/Discord Fluent themes/Fluent-Discord.theme.css
+++ b/Discord Fluent themes/Fluent-Discord.theme.css
@@ -47,10 +47,6 @@
 */
 
 /* Server List Padding */
-.wrapper-2PSQCG {
-    width: 48px;
-    height: 52px;
-}
 
 .theme-dark .guilds-2JjMmN .listItem-3SmSlK {
     width: 68px;
